menambahkan fungsi simpan & edit data pelanggan, pegawai dan membuat layout laporan

--- a/app/src/main/res/layout-land/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout-land/activity_tambah_pelanggan.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJudul"
+        android:id="@+id/tvJudul_pelanggan"
         android:text="@string/card_tambah_pelanggan"
         android:layout_marginTop="20dp"
         android:textSize="24sp"
@@ -24,9 +24,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNama"
+        android:id="@+id/tvNama_pelanggan"
         android:text="@string/card_tambah_nama"
-        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
+        app:layout_constraintTop_toBottomOf="@+id/tvJudul_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="20dp"
@@ -34,16 +34,16 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/etNamaLengkap"
+        android:id="@+id/etNamaLengkap_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="@string/card_tambah_namalengkap"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
+        app:layout_constraintTop_toBottomOf="@+id/tvJudul_pelanggan"
         android:padding="10dp"
         android:layout_marginStart="150dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -51,84 +51,62 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvAlamat"
-        android:text="@string/card_tambah_alamat"
-        app:layout_constraintTop_toBottomOf="@+id/tvNama"
-        android:textSize="18sp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/poppinsmedium"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <EditText
-        android:id="@+id/etAlamat"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_alamat"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
-        android:padding="10dp"
-        android:layout_marginStart="150dp"
-        android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvNoHp"
+        android:id="@+id/tvNoHp_pelanggan"
         android:text="@string/card_tambah_nohp_aktif"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/tvNama_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/poppinsmedium"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etNoHp"
+        android:id="@+id/etNoHp_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="@string/card_tambah_nohp_aktif"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap_pelanggan"
         android:padding="10dp"
         android:layout_marginStart="150dp"
-        android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCabang"
-        android:text="@string/card_tambah_cabang"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
-        android:textSize="18sp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/poppinsmedium"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <EditText
-        android:id="@+id/etCabang"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_cabang"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
-        android:padding="10dp"
-        android:layout_marginStart="150dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
+        android:maxLength="14"
+        android:inputType="phone"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvAlamat_pelanggan"
+        android:text="@string/card_tambah_alamat"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoHp_pelanggan"
+        android:textSize="18sp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/poppinsmedium"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <EditText
+        android:id="@+id/etAlamat_pelanggan"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/card_tambah_alamat"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etNoHp_pelanggan"
+        android:padding="10dp"
+        android:layout_marginStart="150dp"
+        android:fontFamily="@font/poppinsblackitalic"
+        android:background="@drawable/edit_text_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
+        />
+
+
     <Button
-        android:id="@+id/buttonSimpan"
+        android:id="@+id/buttonSimpan_pelanggan"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/card_pelanggan_simpan"
@@ -137,8 +115,8 @@
         android:layout_marginStart="150dp"
         android:fontFamily="@font/poppinssemibold"
         android:textColor="@color/white"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/etNoHp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/etAlamat_pelanggan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
