--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Selamat Pagi, Tiara N"
         android:layout_marginTop="80dp"
-        android:textColor="@color/white"
+        android:textColor="#CAF4FF"
         android:textSize="22sp"
         android:fontFamily="@font/poppinsbold"
         android:textStyle="bold"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="Rabu,8 Januari 2025"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="#CAF4FF"
         android:fontFamily="@font/poppinsblackitalic"
         android:textSize="17sp"
         android:layout_marginStart="210dp"
