--- a/app/src/main/res/layout/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout/activity_tambah_layanan.xml
@@ -42,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNama_layanan"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -67,7 +67,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvHarga_layanan"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:maxLength="10"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -92,7 +93,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTambah_Cabang_layanan"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
