--- a/app/src/main/res/layout/card_data_pelanggann.xml
+++ b/app/src/main/res/layout/card_data_pelanggann.xml
@@ -56,23 +56,14 @@
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_nama_pelanggan_judul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nama Pelanggan :"
-            android:paddingStart="10dp"
-            android:fontFamily="@font/poppinssemibold"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            />
+
         <TextView
             android:id="@+id/tv_nama_pelanggan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/card_pelanggan_nama"
             android:paddingStart="10dp"
-            android:fontFamily="@font/poppinsmediumitalic"
+            android:fontFamily="@font/poppinsbold"
             android:textStyle="bold"
             android:textSize="18sp"
             />
