menambahkan tampilan login, transaksi, membuat layout pilih pelanggan & layanan, dan memperbaiki data pelanggan

--- a/app/src/main/res/layout/card_laporan.xml
+++ b/app/src/main/res/layout/card_laporan.xml
@@ -14,24 +14,21 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- Baris 1: Nama, ID dan Status -->
-        <!-- Baris 1: Angka + Nama dan Status -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <!-- Angka di kiri -->
             <TextView
                 android:id="@+id/tvAngka"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/poppinsmedium"
                 android:text="[1]"
                 android:textSize="14sp" />
 
-            <!-- Nama dan Status -->
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -49,7 +46,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="Jessica"
-                        android:textSize="16sp"
+                        android:fontFamily="@font/poppinsmediumitalic"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -57,13 +55,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#7AC6D2"
+                        android:fontFamily="@font/poppinssemibold"
                         android:paddingHorizontal="8dp"
                         android:paddingVertical="2dp"
-                        android:text="Selesai"
+                        android:text="@string/StatusPembayaran"
                         android:textSize="12sp" />
                 </LinearLayout>
 
-                <!-- Baris 2: Angka kosong + waktu -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -71,14 +69,13 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
-                    <!-- Spacer untuk menyamakan posisi angka -->
-
 
                     <TextView
                         android:id="@+id/tvWaktu"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2025-04-14 14:14:14"
+                        android:fontFamily="@font/poppinsmedium"
                         android:textColor="#888888"
                         android:textSize="12sp" />
                 </LinearLayout>
@@ -88,14 +85,12 @@
         </LinearLayout>
 
 
-        <!-- Garis -->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginVertical="8dp"
             android:background="#CCCCCC" />
 
-        <!-- Icon + Jenis Layanan -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -117,6 +112,7 @@
                     android:id="@+id/tvLayanan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsbold"
                     android:text="Cuci Setrika 6kg"
                     android:textStyle="bold" />
 
@@ -124,20 +120,19 @@
                     android:id="@+id/tvTambahan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="+2 Layanan Tambahan"
+                    android:text="@string/Layanan_Tambahan"
+                    android:fontFamily="@font/poppinsmediumitalic"
                     android:textColor="#888888"
                     android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
-        <!-- Garis -->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginVertical="8dp"
             android:background="#CCCCCC" />
 
-        <!-- Total Bayar dan Tombol / Tanggal Diambil -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -146,7 +141,6 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <!-- Kolom Kiri: Total Bayar -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -157,19 +151,20 @@
                     android:id="@+id/tvTotalBayar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total Bayar"
-                    android:textSize="16sp" />
+                    android:text="@string/Total_Bayar"
+                    android:fontFamily="@font/poppinsmedium"
+                    android:textSize="13sp" />
 
                 <TextView
                     android:id="@+id/tvTotal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinssemibold"
                     android:text="Rp48.000,00"
-                    android:textSize="16sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <!-- Kolom Kanan: Diambil + Tombol Aksi -->
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -183,17 +178,20 @@
                     android:layout_height="wrap_content"
                     android:text="Diambil Pada\n2025-04-14 14:14:14"
                     android:textAlignment="textEnd"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
+                    android:textSize="10sp"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/poppinsmedium"
+         />
 
                 <Button
                     android:id="@+id/btnAksi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
                     android:backgroundTint="#FF3D00"
-                    android:text="Bayar Sekarang"
+                    android:fontFamily="@font/poppinssemibold"
+                    android:text="@string/Btn_statuspembayaran"
                     android:textColor="#FFFFFF"
-                    android:visibility="gone" />
+              />
             </LinearLayout>
         </LinearLayout>
 
