--- a/app/src/main/res/layout/card_layanan_pelanggan.xml
+++ b/app/src/main/res/layout/card_layanan_pelanggan.xml
@@ -58,7 +58,7 @@
 
 
         <TextView
-            android:id="@+id/tv_namalayanan"
+            android:id="@+id/tv_nama_layanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/card_layanan_nama"
@@ -78,7 +78,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_harga_judul"
+            android:id="@+id/tv_harga_layanan_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Harga :"
@@ -88,7 +88,7 @@
             android:textSize="15sp"
             />
         <TextView
-            android:id="@+id/tv_harga"
+            android:id="@+id/tv_harga_layanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/card_layanan_harga"
