--- a/app/src/main/res/layout/card_data_cabang.xml
+++ b/app/src/main/res/layout/card_data_cabang.xml
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card_layanan"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/tv_card_cabang"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="10dp">
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:elevation="12dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="horizontal">
-
             <TextView
-                android:id="@+id/id_layanan_judul"
+                android:id="@+id/id_cabang_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#577BC1"
-                android:fontFamily="@font/poppinssemibold"
-                android:textColor="@color/white"
+                android:fontFamily="@font/poppinsmedium"
+                android:textColor="@color/black"
                 android:padding="5dp"
-                android:text="ID Layanan :"
+                android:text="ID Cabang :"
                 android:textSize="16sp" />
+
             <TextView
-                android:id="@+id/id_layanan"
+                android:id="@+id/id_cabang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#577BC1"
                 android:fontFamily="@font/poppinsmediumitalic"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:padding="5dp"
-                android:text="@string/card_layanan_id"
+                android:text="@string/card_cabang_id"
                 android:textSize="16sp" />
 
 
+
         </LinearLayout>
+
 
 
     </androidx.cardview.widget.CardView>
@@ -58,40 +58,38 @@
 
 
             <TextView
-                android:id="@+id/tv_nama_layanan"
+                android:id="@+id/tv_nama_cabang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_layanan_nama"
+                android:text="@string/card_cabang_nama"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsbold"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 />
-
         </LinearLayout>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_harga_layanan_judul"
+                android:id="@+id/tv_alamat_cabang_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Harga :"
+                android:text="Alamat :"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
                 android:textSize="15sp"
                 />
             <TextView
-                android:id="@+id/tv_harga_layanan"
+                android:id="@+id/tv_alamat_cabang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_layanan_harga"
+                android:text="@string/card_cabang_alamat"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
@@ -99,50 +97,36 @@
                 />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_layanancabang_judul"
+                android:id="@+id/tv_layanan_cabang_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cabang :"
+                android:text="Layanan :"
                 android:paddingStart="10dp"
-                android:textStyle="bold"
                 android:fontFamily="@font/poppinssemibold"
+                android:textStyle="bold"
                 android:textSize="15sp"
                 />
             <TextView
-                android:id="@+id/tv_layanancabang"
+                android:id="@+id/tv_layanan_cabang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_layanan_cabang"
+                android:text="@string/card_cabang_layanan"
                 android:paddingStart="10dp"
-                android:textStyle="bold"
                 android:fontFamily="@font/poppinsmediumitalic"
+                android:textStyle="bold"
                 android:textSize="15sp"
                 />
         </LinearLayout>
 
-
-
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:columnCount="3"
-            android:rowCount="2"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            >
-
-
-        </GridLayout>
 
 
     </LinearLayout>
