--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/tvSubJudulSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="70dp"
+                android:layout_marginEnd="77dp"
                 android:text="@string/SubJudulSignUp"
                 android:textColor="@android:color/white"
                 android:fontFamily="@font/poppinsbold"
@@ -71,9 +71,10 @@
                 android:hint="@string/Nama_SignUp"
                 android:inputType="text"
                 android:fontFamily="@font/poppinssemibold"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/edit_text_border"
-                android:padding="12dp" />
+                android:background="@drawable/edit_border_new"
+                android:backgroundTint="@null"
+                android:padding="12dp"
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -92,9 +93,11 @@
                 android:hint="@string/NoHp_SignUp"
                 android:inputType="phone"
                 android:fontFamily="@font/poppinssemibold"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/edit_text_border"
-                android:padding="12dp" />
+                android:background="@drawable/edit_border_new"
+                android:backgroundTint="@null"
+                android:padding="12dp"
+                android:maxLength="14"
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -106,16 +109,19 @@
                 android:fontFamily="@font/poppinsmedium"
                 app:layout_constraintStart_toStartOf="parent"/>
 
-            <EditText
+            <com.nilam.laundry.customview.TogglePasswordEditText
                 android:id="@+id/etPass_SignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/Pw_SignUp"
                 android:inputType="textPassword"
                 android:fontFamily="@font/poppinssemibold"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/edit_text_border"
-                android:padding="12dp" />
+                android:background="@drawable/edit_border_new"
+                android:backgroundTint="@null"
+                android:padding="12dp"
+                android:layout_marginTop="8dp"
+                android:drawableEnd="@drawable/ic_visibility_off"
+                android:drawablePadding="10dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_SignUp"
